OC-24077 Fixed wrap of long text audit history

--- a/packages/enketo-express/app/views/styles/component/_print-oc.scss
+++ b/packages/enketo-express/app/views/styles/component/_print-oc.scss
@@ -102,6 +102,7 @@
 
                 &--audit {
                     padding: 0 20px 0 10px;
+                    word-break: break-word;
 
                     .or-comment-widget__content__history__row__main__comment__meta {
                         display: none;
